--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -120,7 +120,7 @@ $tabs-border: #bbb;
 // Helps set up a vertical rhythm.
 @import "compass/typography/vertical_rhythm";
 // Add the Zen Grids responsive layout mixins.
-@import "zen";
+@import "zen-grids";
 
 // Now we add our custom helper mixins.
 @import "mixins";
