--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -121,6 +121,10 @@ $tabs-border: #bbb;
 @import "compass/typography/vertical_rhythm";
 // Add the Zen Grids responsive layout mixins.
 @import "zen-grids";
+//Add Zen Grids Background
+@import "zen-grids/background";
+//Add Zen Flow
+@import "zen-grids/flow";
 
 // Now we add our custom helper mixins.
 @import "mixins";
