--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -93,6 +93,14 @@ $font-monospace:   $courier;
 //
 // Colors, etc.
 //
+$white: #FFFFFF;
+$gray: #717272;
+$light-gray: #E5E5E5;
+$med-gray: #636363;
+$dark-gray: #494849;
+$orange: #F15A24;
+$dark-orange: #DA6A27;
+
 
 // The amount lists, blockquotes and comments are indented.
 $indent-amount: 30px;
