--- a/css/styles.css
+++ b/css/styles.css
@@ -1928,9 +1928,10 @@ tr.selected td {
  * _varisco.scss has customization for Tom Varisco Designs.
  *
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\000037}}
-#page {
-  background: #e5e5e5;
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000312}}
+#block-system-main-menu ul li {
+  list-style: none;
+  list-style-position: inside;
 }
 
 /* @import "theme-B"; */
