--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -5,5 +5,13 @@
  */
 
 #page {
-	background: $light-gray;
+  //background: none repeat scroll 0 0 $light-gray;
+}
+#block-system-main-menu {
+	ul {
+		li {
+			list-style: none;
+			list-style-position: inside;
+		}
+	}
 }
