--- a/css/styles.css
+++ b/css/styles.css
@@ -1928,10 +1928,23 @@ tr.selected td {
  * _varisco.scss has customization for Tom Varisco Designs.
  *
  */
-@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000312}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000311}}
+#block-system-main-menu ul {
+  padding: 0;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000313}}
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: inside;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000316}}
+#block-system-main-menu ul li a {
+  color: #717272;
+  text-decoration: none;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000320}}
+#block-system-main-menu ul li a:hover {
+  color: #da6a27;
 }
 
 /* @import "theme-B"; */
