--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -8,10 +8,18 @@
   //background: none repeat scroll 0 0 $light-gray;
 }
 #block-system-main-menu {
-	ul {
-		li {
-			list-style: none;
-			list-style-position: inside;
-		}
+  ul {
+	  padding: 0;
+	li {
+	  list-style: none;
+	  list-style-position: inside;
+	  a {
+		color: $gray;
+		text-decoration: none;
+	  }
+	  a:hover {
+		color: $dark-orange;
+	  }
 	}
+  }
 }
