--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -152,6 +152,55 @@ $zen-auto-include-item-base: false;
       }
     }
   }
+// responsive grid layout
+  .views-responsive-grid {
+    @include zen-grid-item-base();
+    @include zen-grid-container();
+    //@include zen-grid-background();
+  }
+  .views-responsive-grid.views-columns-2 {
+    $zen-columns:  2 !global;
+    @include zen-grid-container($context: flow);
+    .views-row {
+      @include zen-new-row();
+    }
+    .views-column-1 {
+      @include zen-grid-item(1, 1);
+    }
+    .views-column-2 {
+      @include zen-grid-item(1, 2);
+    }
+  }
+  .views-responsive-grid.views-columns-3 {
+    $zen-columns:  2 !global;
+    @include zen-grid-container($context: flow);
+    //@include zen-grid-background();
+      .views-row {
+        width:49%;
+        float:left;
+        &:nth-child(2n - 1) {
+          margin-right:2%;
+        }
+      }
+  }
+  .views-responsive-grid.views-columns-4 {
+    $zen-columns:  4 !global;
+    @include zen-grid-container($context: flow);
+    //@include zen-grid-background();  
+    .views-column-1 {
+      @include zen-grid-item(1, 1);
+    }
+    .views-column-2 {
+      @include zen-grid-item(1, 2);
+      @include zen-new-row();
+    }
+    .views-column-3 {
+      @include zen-grid-item(1, 1);
+    }
+    .views-column-4 {
+      @include zen-grid-item(1, 2);
+    }
+  }  
 }
 
 /**
@@ -214,4 +263,53 @@ $zen-auto-include-item-base: false;
       @include zen-grid-item(1, 5);
     }
   }
+}
+// responsive grid layout
+  .views-responsive-grid {
+    @include zen-grid-item-base();
+    @include zen-grid-container();
+    //@include zen-grid-background();
+  }
+  .views-responsive-grid .views-row {
+    @include zen-new-row();
+  }
+  .views-responsive-grid.views-columns-2 {
+    $zen-columns:  2 !global;
+    @include zen-grid-container($context: flow);
+    .views-column-1 {
+      @include zen-grid-item(1, 1);
+    }
+    .views-column-2 {
+      @include zen-grid-item(1, 2);
+    }
+  }
+  .views-responsive-grid.views-columns-3 {
+    $zen-columns:  3 !global;
+    @include zen-grid-container($context: flow);
+    .views-column-1 {
+      @include zen-grid-item(1, 1);
+    }
+    .views-column-2 {
+      @include zen-grid-item(1, 2);
+    }
+    .views-column-3 {
+      @include zen-grid-item(1, 3);
+    }
+  }
+  .views-responsive-grid.views-columns-4 {
+    $zen-columns:  4 !global;
+    @include zen-grid-container($context: flow);
+    //@include zen-grid-background();  
+    .views-column-1 {
+      @include zen-grid-item(1, 1);
+    }
+    .views-column-2 {
+      @include zen-grid-item(1, 2);
+    }
+    .views-column-3 {
+      @include zen-grid-item(1, 3);
+    }
+    .views-column-4 {
+      @include zen-grid-item(1, 4);
+    }
 }
