--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -186,7 +186,7 @@ $zen-auto-include-item-base: false;
   .views-responsive-grid.views-columns-4 {
     $zen-columns:  2 !global;
     @include zen-grid-container($context: flow);
-    //@include zen-grid-background();
+    @include zen-grid-background();
       .views-row {
         width:49%;
         float:left;
