--- a/css/styles.css
+++ b/css/styles.css
@@ -970,12 +970,12 @@ table {
     clear: both;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/layouts\/_responsive\.scss}line{font-family:\00003178}}
-  .views-responsive-grid.views-columns-3 .views-row {
+  .views-responsive-grid.views-columns-3 .views-columns {
     width: 49%;
     float: left;
   }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/layouts\/_responsive\.scss}line{font-family:\00003181}}
-  .views-responsive-grid.views-columns-3 .views-row:nth-child(2n - 1) {
+  .views-responsive-grid.views-columns-3 .views-columns:nth-child(2n - 1) {
     margin-right: 2%;
   }
 
