--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -175,7 +175,7 @@ $zen-auto-include-item-base: false;
     $zen-columns:  2 !global;
     @include zen-grid-container($context: flow);
     @include zen-grid-background();
-      .views-columns {
+      .views-row {
         width:49%;
         float:left;
         &:nth-child(2n - 1) {
@@ -188,17 +188,17 @@ $zen-auto-include-item-base: false;
     @include zen-grid-container($context: flow);
     //@include zen-grid-background();  
     .views-column-1 {
-      @include zen-grid-item(1, 1);
+      @include zen-grid-item(2, 1);
     }
     .views-column-2 {
-      @include zen-grid-item(1, 2);
+      @include zen-grid-item(2, 3);
       @include zen-new-row();
     }
     .views-column-3 {
-      @include zen-grid-item(1, 1);
+      @include zen-grid-item(2, 1);
     }
     .views-column-4 {
-      @include zen-grid-item(1, 2);
+      @include zen-grid-item(2, 3);
     }
   }  
 }
