removed grid background

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -81,7 +81,7 @@ $zen-auto-include-item-base: false;
   $zen-columns: 3;
 
   #page {
-    @include zen-grid-background();
+    //@include zen-grid-background();
   }
   /**
    * The layout when there is only one sidebar, the left one.
@@ -212,7 +212,7 @@ $zen-auto-include-item-base: false;
   $zen-columns: 5;
 
   #page {
-    @include zen-grid-background();
+    //@include zen-grid-background();
   }
 
   /**
