--- a/css/styles.css
+++ b/css/styles.css
@@ -2375,4 +2375,44 @@ tr.selected td {
   color: #da6a27;
 }
 
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000327}}
+.mean-container .mean-bar {
+  background: none repeat scroll 0 0 transparent;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000330}}
+.mean-container a.meanmenu-reveal {
+  background: none repeat scroll 0 0 #717272;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000332}}
+.mean-container a.meanmenu-reveal span {
+  background: none repeat scroll 0 0 #FFFFFF;
+  display: block;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000336}}
+.mean-container a.meanmenu-reveal span.mean-head {
+  background: none repeat scroll 0 0 transparent;
+  color: #f15a24;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000341}}
+.mean-container .mean-nav {
+  background: none repeat scroll 0 0 #717272;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000343}}
+.mean-container .mean-nav h2 {
+  color: #f15a24;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000346}}
+.mean-container .mean-nav ul li a {
+  background: none repeat scroll 0 0 #717272;
+  color: #f15a24;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000350}}
+.mean-container .mean-nav ul li a:hover {
+  background: none repeat scroll 0 0 #717272;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000353}}
+.mean-container .mean-nav ul li a.mean-expand:hover {
+  background: none repeat scroll 0 0 #717272;
+}
+
 /* @import "theme-B"; */
