mean menu color

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -35,17 +35,17 @@
     }
     span.mean-head {
       background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
-      color: $orange;
+      color: $white;
     }
   }
   .mean-nav {
     background: none repeat scroll 0 0 $gray;
     h2 {
-      color: $orange;
+      color: $white;
     }
     ul li a {
       background: none repeat scroll 0 0 $gray;
-      color: $orange;
+      color: $white;
     }
     ul li a:hover {
       background: none repeat scroll 0 0 $gray;
