--- a/css/styles.css
+++ b/css/styles.css
@@ -2391,7 +2391,7 @@ tr.selected td {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000336}}
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
-  color: #f15a24;
+  color: white;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000341}}
 .mean-container .mean-nav {
@@ -2399,12 +2399,12 @@ tr.selected td {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000343}}
 .mean-container .mean-nav h2 {
-  color: #f15a24;
+  color: white;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000346}}
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
-  color: #f15a24;
+  color: white;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000350}}
 .mean-container .mean-nav ul li a:hover {
