mean menu color

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -49,6 +49,7 @@
     }
     ul li a:hover {
       background: none repeat scroll 0 0 $gray;
+      color: $dark-orange;
     }
     ul li a.mean-expand:hover {
       background: none repeat scroll 0 0 $gray;
