mean menu color

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -5,7 +5,7 @@
  */
 
 #page {
-  //background: none repeat scroll 0 0 $light-gray;
+  background: none repeat scroll 0 0 $light-gray;
 }
 #block-system-main-menu {
   ul {
