--- a/css/styles.css
+++ b/css/styles.css
@@ -2356,6 +2356,11 @@ tr.selected td {
  * _varisco.scss has customization for Tom Varisco Designs.
  *
  */
+@media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\000037}}
+#page {
+  background: none repeat scroll 0 0 #e5e5e5;
+}
+
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000311}}
 #block-system-main-menu ul {
   padding: 0;
