mean menu color

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -7,6 +7,9 @@
 #page {
   background: none repeat scroll 0 0 $light-gray;
 }
+h1 {
+	color: $orange;
+}
 #block-system-main-menu {
   ul {
 	  padding: 0;
