--- a/css/styles.css
+++ b/css/styles.css
@@ -2362,7 +2362,7 @@ tr.selected td {
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000310}}
-h1 {
+h1#site-name {
   color: #f15a24;
 }
 
