--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -135,11 +135,13 @@ body {
  * http://meyerweb.com/eric/thoughts/2007/06/11/who-ordered-the-link-states
  */
 a:link {
+  text-decoration: none;
 }
 a:visited {
 }
 a:hover,
 a:focus {
+  text-decoration: none;
 }
 a:active {
 }
