--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -7,7 +7,7 @@
 #page {
   background: none repeat scroll 0 0 $light-gray;
 }
-h1#site-name {
+.header__site-name {
 	color: $orange;
 }
 #block-system-main-menu {
