page margin-top

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -8,6 +8,9 @@
   background: none repeat scroll 0 0 $light-gray;
   margin-top: 2em;
 }
+.views-field-title {
+	color: $dark-orange;
+}
 #block-system-main-menu {
   ul {
 	  padding: 0;
