title font size

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -8,6 +8,10 @@
   background: none repeat scroll 0 0 $light-gray;
   margin-top: 2em;
 }
+.header__site-name {
+  font-size: 1em;
+  line-height: 1.5em;
+}
 .views-field-title {
 	color: $dark-orange;
 }
