--- a/css/styles.css
+++ b/css/styles.css
@@ -2379,7 +2379,7 @@ tr.selected td {
 .header__site-name {
   font-size: 1em;
   line-height: 1.5em;
-  margin: 2em;
+  margin: 2em 2em 0;
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/\/websites\/TomVarisco\/rel\/sites\/all\/themes\/varisco\/sass\/_varisco\.scss}line{font-family:\0000316}}
