--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -16,6 +16,9 @@
 .views-field-title {
 	color: $dark-orange;
 }
+#content {
+	margin-top: -2em;
+}
 #block-system-main-menu {
   ul {
   	  font-size: 3em;
