--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -98,6 +98,7 @@ $gray: #717272;
 $light-gray: #E5E5E5;
 $med-gray: #636363;
 $dark-gray: #494849;
+$somecolor: #9C9A9A;
 $orange: #F15A24;
 $dark-orange: #DA6A27;
 
