--- a/sass/_init.scss
+++ b/sass/_init.scss
@@ -96,9 +96,9 @@ $font-monospace:   $courier;
 $white: #FFFFFF;
 $gray: #717272;
 $light-gray: #E5E5E5;
+$lighter-gray: #9C9A9A;
 $med-gray: #636363;
 $dark-gray: #494849;
-$somecolor: #9C9A9A;
 $orange: #F15A24;
 $dark-orange: #DA6A27;
 
