--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -28,11 +28,9 @@
   font-size: 1.25em;
 }
 .field-name-field-project-description {
-	border-top: 1px solid $somecolor;
-	border-bottom: 1px solid $gray;
+	border-top: 1px solid $lighter-gray;
+	border-bottom: 1px solid $lighter-gray;
 	color: $dark-gray;
-	padding-top: 1em;
-	padding-bottom: 1em;
 }
 #block-system-main-menu {
   ul {
